# color-shift

./: .gitignore  Makefile  README.md  color-shift.cabal
src/: Main.hs
