name:                color-shift
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/defilercompiler/color-shift
license:             BSD3
license-file:        LICENSE
author:              Krystof Kuzelka
maintainer:          krystof.kuzelka@gmail.com
copyright:           2020 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable color-shift
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
		     , JuicyPixels
		     , lens
		     , optparse-applicative
		     , random
		     , split
		     , vector
		     , vector-algorithms
		     , containers
		     , primitive
		     , transformers
		     , time
                     , tuple
